# HypoTestX

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  README.md  README_PYPI.md  pyproject.toml  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  release.yml  tests.yml
docs/source/: assumption_checking.md  backends.md  changelog.md  conf.py  contributing.md  direct_api.md  index.rst  installation.md  license.md  natural_language.md  power_analysis.md  quickstart.md  reporting.md  result_object.md  visualization.md  why_hypotestx.md
docs/source/api/: analyze.rst  backends.rst  power.rst  result.rst  tests.rst  visualization.rst
hypotestx/: __init__.py  _init__.py  cli.py
hypotestx/bayesian/: __init__.py  mcmc.py  priors.py  tests.py
hypotestx/core/: __init__.py  assumptions.py  engine.py  exceptions.py  parser.py  result.py  testsuite.py  validators.py
hypotestx/core/llm/: __init__.py  base.py  prompts.py
hypotestx/core/llm/backends/: __init__.py  fallback.py  gemini.py  huggingface.py  ollama.py  openai_compat.py
hypotestx/domains/: __init__.py  ab_testing.py  finance.py  medical.py  survey.py
hypotestx/education/: __init__.py  examples.py  explanations.py
hypotestx/explore/: __init__.py  association.py  correlation.py  eda.py  visualize.py
hypotestx/math/: __init__.py  basic.py  distributions.py  linear_algebra.py  special.py  statistics.py
hypotestx/meta/: __init__.py  analysis.py  bias.py
hypotestx/ml/: __init__.py  fairness.py  feature_tests.py  model_comparison.py
hypotestx/power/: __init__.py  analysis.py  sample_size.py
hypotestx/reporting/: __init__.py  formatters.py  generator.py  templates.py
hypotestx/robust/: __init__.py  estimators.py  outliers.py  tests.py
hypotestx/stats/: __init__.py  bootstrap.py  descriptive.py  distributions.py  inference.py
hypotestx/tests/: __init__.py  categorical.py  correlation.py  nonparametric.py  parametric.py  regression.py
hypotestx/timeseries/: __init__.py  changepoint.py  stationarity.py  trend.py
hypotestx/utils/: __init__.py  data_utils.py  formatting.py  preprocessing.py  validation.py
tests/test_core/: test_assumptions.py  test_azure_backend.py  test_engine.py  test_exceptions.py  test_parser.py  test_result.py  test_testsuite.py
tests/test_data/: sample_datasets.py
tests/test_math/: test_distributions.py  test_linear_algebra.py  test_statistics.py
tests/test_power/: __init__.py  test_analysis.py  test_power_extra.py  test_sample_size.py
tests/test_reporting/: test_formatters.py  test_generator.py  test_templates.py  test_visualize.py
tests/test_stats/: __init__.py  test_bootstrap_extra.py  test_descriptive_extra.py  test_inference.py  test_stats.py
tests/test_tests/: test_categorical.py  test_correlation.py  test_nonparametric.py  test_parametric.py
tests/test_utils/: test_data_utils.py  test_formatting.py  test_preprocessing.py  test_validation.py
