[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypotestx"
version = "1.0.5"
description = "Natural language hypothesis testing and comprehensive statistics library"
authors = [
    {name = "Ankit"}
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["statistics", "hypothesis testing", "data science", "natural language", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    # No external dependencies - pure Python implementation
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.17.0",
    "pandas>=1.3.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
]
# Optional: enables result.plot(), plot_result(), plot_distributions(),
# plot_p_value(), and the embedded-chart path in generate_report() / export_html().
visualization = [
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
]
# Optional: enables export_pdf() via weasyprint (HTML → PDF).
reporting = [
    "weasyprint>=53.0",
]
# Convenience: all optional extras
all = [
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "weasyprint>=53.0",
    "pandas>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/Ankit-Anand123/hypotestx"
Repository = "https://github.com/Ankit-Anand123/hypotestx"
"Bug Tracker" = "https://github.com/Ankit-Anand123/hypotestx/issues"

[project.scripts]
hypotestx = "hypotestx.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hypotestx*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["hypotestx"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true